# django-consistency-enforcer

./: .gitignore  .readthedocs.yaml  DEVELOPMENT.rst  README.rst  mypy.ini  pyproject.toml  pytest.ini  tox.ini
.github/: CODEOWNERS
.github/workflows/: ci.yml  lint.yml  release.yml
django_consistency_enforcer/: _display.py  _errors.py  _functions.py  _raw_patterns.py  _scenarios.py  _test_runner.py  _view_patterns.py  errors.py  urls.py
docs/: conf.py  index.rst
docs/api/: changelog.rst  representations.rst  scenarios.rst  test_runner.rst
example/: mypy.ini  pyproject.toml
example/djangoexample/: asgi.py  settings.py  urls.py  views.py  wsgi.py
scripts/test_helpers/: pyproject.toml
scripts/test_helpers/django_consistency_enforcer_test_driver/: __init__.py  checkers.py  comparators.py  patterns.py  scenarios.py  views.py
tests/: test_works.py
tests/test_urls/: test_display.py  test_django_project.py  test_errors.py  test_functions.py  test_raw_patterns.py  test_runner.py  test_view_patterns.py
tests/test_urls/test_scenarios/: test_check_accepts_args.py  test_check_kwargs_must_be_annotated.py  test_check_positional_args_are_correct.py  test_has_correct_annotations.py  test_required_args_match_url.py  test_view_class_request_annotation.py
tools/: .requirements.readthedocs.txt  pyproject.toml  run.py
