[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "djangoexample"
dynamic = ["version"]
description = "Example django project"
authors = [
    { name = "Stephen Moore", email = "stephen@delfick.com" },
]
dependencies = [
    "django>=5.1",
]

[tool.hatch.version]
path = "djangoexample/version.py"

[tool.hatch.build.targets.wheel]
include = [
    "/djangoexample",
]
