[project]
name = "tools"
version = "0.1"
dependencies = [
    "tox==4.32.0",
    "click>=8.3.0",
    "ruff==0.14.3",
    "remote-pdb==2.1.0",
    "mypy==1.18.2"
]

[project.optional-dependencies]
docs = [
    "sphinx-autobuild==2025.8.25",
    "sphinx-immaterial==0.13.6",
    "sphinx==8.2.3",
    "sphinx-toolbox==4.0.0",
]
django-5-2-4 = [
    "django-stubs==5.2.2",
    "django==5.2.6"
]
